Having Issues Aligning
Cannot Align Content Center

--- a/Assignment 6/style.css
+++ b/Assignment 6/style.css
@@ -1,3 +1,6 @@
+header {background-color: mintcream}
+
+footer {background-color: mintcream}
 nav {
   font-size: 30px;background-color: bisque;
 }
@@ -33,3 +36,24 @@ li { display: inline-block; margin: 10px; padding: 10px;
     margin-top: 8px;
     vertical-align: middle;
   }
+
+  div.gallery {
+    margin: 5px;
+    border: 1px solid #ccc;
+    float: left;
+    width: 180px;
+}
+
+div.gallery:hover {
+    border: 1px solid #777;
+}
+
+div.gallery img {
+    width: 530px;
+    height: auto;
+}
+
+div.desc {
+    padding: 15px;
+    text-align: center;
+}
